<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/plain_bg">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/firstname_text"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/first_name_str"
                android:textSize="18sp"
                android:gravity="center_vertical|start"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/mTeal"
                android:textColorHint="@color/mTeal"
                android:background="@drawable/inputs_02"
                android:drawableStart="@drawable/user_bg"
                android:drawablePadding="5dp" /></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/lastname_text"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/last_name_str"
                android:textSize="18sp"
                android:gravity="center_vertical|start"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/mTeal"
                android:textColorHint="@color/mTeal"
                android:background="@drawable/inputs_02"
                android:drawableStart="@drawable/user_bg"
                android:drawablePadding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/username_text"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/email_str"
            android:textSize="18sp"
            android:gravity="center_vertical|start"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/mTeal"
            android:textColorHint="@color/mTeal"
            android:background="@drawable/inputs_02"
            android:drawableStart="@drawable/username"
            android:drawablePadding="5dp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password_text"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/password_str"
            android:textSize="18sp"
            android:gravity="center_vertical|start"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/mTeal"
            android:textColorHint="@color/mTeal"
            android:background="@drawable/inputs_02"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/password" /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/repeatpassword_text"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/repeat_pass_str"
            android:textSize="18sp"
            android:gravity="center_vertical|start"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/mTeal"
            android:textColorHint="@color/mTeal"
            android:background="@drawable/inputs_02"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/password" /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/contact_text"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/contact_str"
            android:textSize="18sp"
            android:gravity="center_vertical|start"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/mTeal"
            android:textColorHint="@color/mTeal"
            android:background="@drawable/inputs_02"
            android:drawableStart="@drawable/contacts"
            android:drawablePadding="5dp" /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/address1_text"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/address1_str"
            android:textSize="18sp"
            android:gravity="center_vertical|start"
            android:inputType="textPostalAddress"
            android:singleLine="true"
            android:textColor="@color/mTeal"
            android:textColorHint="@color/mTeal"
            android:background="@drawable/inputs_02"
            android:drawableStart="@drawable/address"
            android:drawablePadding="5dp" /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/address2_text"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/address2_str"
            android:textSize="18sp"
            android:gravity="center_vertical|start"
            android:inputType="textPostalAddress"
            android:singleLine="true"
            android:textColor="@color/mTeal"
            android:textColorHint="@color/mTeal"
            android:background="@drawable/inputs_02"
            android:drawableStart="@drawable/address"
            android:drawablePadding="5dp" /></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/city_text"
                android:enabled="false"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:text="@string/city_str"
                android:textSize="18sp"
                android:gravity="center_vertical|start"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/mTeal"
                android:textColorHint="@color/mTeal"
                android:background="@drawable/inputs_02"
                android:drawableStart="@drawable/city_bg"
                android:drawablePadding="5dp" /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColor="@color/mWhite"
            android:background="@drawable/login_selector"
            android:text="@string/register_btn"
            android:textSize="18sp"
            android:textColorHighlight="@color/mWhite"
            android:singleLine="false"
            android:onClick="register"/></LinearLayout>

    </LinearLayout>

</ScrollView>
